1.Empty space issue below the header without description on panels 2.Fix for alignment of inline checkbox and radio widgets

--- a/src/main/webapp/scripts/modules/layouts/styles/less/layouts.less
+++ b/src/main/webapp/scripts/modules/layouts/styles/less/layouts.less
@@ -1518,7 +1518,7 @@ body {
     }
   }
   .panel-heading {
-    .description {
+    .description:not(:empty) {
       font-size: .75em;
       margin-top: 5px;
     }
